--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-body {
-  margin: 0;
-}
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
+@import url(./normalize.css);
+
 .container {
   background-color: silver;
 }
@@ -41,6 +41,12 @@ body *,
 body *::before,
 body *::after {
   box-sizing: border-box;
+}
+
+/* 본문 기본 설정 */
+body {
+  font-family: "Spoqa Han Sans", "Sans-serif";
+  font-weight: 400;
 }
 
 /* 레이아웃 */
