--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
+@import url(./fontello.css);
 @import url(./normalize.css);
 /* CSS class module */
 .clearfix::after {
@@ -67,7 +68,6 @@ body {
   color: #181818;
   background-color: #fff;
 }
-
 /* 레이아웃 */
 .header,
 .visual,
@@ -88,8 +88,8 @@ body {
 .logo {
   position: absolute;
   margin: 0;
-  top: 65px;
-  left: 45px;
+  top: 50px;
+  left: 65px;
 }
 /* 멤버 링크 */
 .member {
@@ -114,9 +114,11 @@ body {
 }
 /* 메인 메뉴 */
 .navigation {
-  padding-bottom: 50px;
+  padding-bottom: 40px;
 }
 .menu {
+  /* display: flex;
+  justify-content: space-around; */
   background: #f24d30
     linear-gradient(
       to bottom,
@@ -126,21 +128,62 @@ body {
       #e0802c 100%
     );
   margin: 5px 0 0;
-  padding-left: 0;
+  padding-left: 229px;
   list-style-type: none;
-  /* box-shadow: 0 -2px 5px 0 #000; */
+  /* box-shadow: 0 -2px 5px 0 #000;  */ /* shadow는 box-sizing에 영향을 주지 않음 */
   border-top: 2px solid #000;
   border-radius: 0 0 5px 5px;
+  height: 47px;
+}
+.menu-item {
+  position: relative;
+  float: left;
+  border-left: 2px solid white;
 }
 .menu-link {
+  display: block;
+  line-height: 45px; /* 한 줄이 45px */
   color: #fff;
   font-weight: 700;
   font-size: 1.6rem;
+  padding: 0 20px;
+  text-shadow: 1px 1px 2px #000, -1px -1px 2px #000;
 }
 .submenu {
+  /* float: left;
+  left: 0px;
+  top: 20px; */
+  position: absolute;
+  top: 47px;
   padding-left: 0;
   list-style-type: none;
   background-color: pink;
+  display: none; /* 임시 */
+  white-space: nowrap; /* 줄바꿈 금지 */
+}
+.menu > li:nth-child(1) .submenu,
+.menu > li:nth-child(2) .submenu,
+.menu > li:nth-child(3) .submenu {
+  left: 0;
+}
+.menu > li:nth-child(4) .submenu,
+.menu > li:nth-child(5) .submenu,
+.menu > li:nth-child(6) .submenu {
+  right: 0;
+}
+
+.menu-item-act .submenu {
+  display: block;
+}
+.submenu li {
+  background-color: yellow;
+  display: inline-block;
+  margin-right: 10px;
+}
+.submenu a {
+  background-color: orange;
+  padding: 10px 0;
+  display: block;
 }
 /* 메인 콘텐츠 */
 .main {
