--- a/css/main.css
+++ b/css/main.css
@@ -220,6 +220,14 @@ body {
     left: 400px; */
   }
 }
+@keyframes bgAni {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 .visual {
   /* animation: flower 0.5s 1s forwards;
   background-image: url(./images/bg_flower.png); */
@@ -229,28 +237,30 @@ body {
 }
 .visual::before,
 .visual::after {
-  content: "가상 요소 박서";
+  content: "";
   width: 100%;
   height: 100%;
   position: absolute; /* absolute 되면 block 요소가 됨 */
   left: 0;
   top: 0;
+  background: bgAni 2s infinite alternate;
 }
 .visual::before {
   /* background-color: yellow;
   background-image: url(./images/ani_flower_01.png),
     url(./images/ani_flower_02.png);
   background-repeat: no-repeat; */
-
+  /* animation: bgAni 2s infinite 2s alternate; */
   background: url(./images/ani_flower_01.png) no-repeat 0 -10px,
     url(./images/ani_flower_02.png) no-repeat 670px 0;
   /* background는 반대로 깔리기 때문에 배경칼라가 제일 뒤에 요소에 넣어야됨 */
-  background-color: yellow;
   /* background-color 제일 뒤로 빼라 */
 }
 .visual::after {
+  /* animation: bgAni 2s forwards infinite 1s alternate; */
   background: url(./images/ani_flower_03.png) no-repeat 300px 0,
     url(./images/ani_flower_04.png) no-repeat 800px 0;
+  animation-delay: 1s;
 }
 .visual-text {
   opacity: 0;
