--- a/css/main.css
+++ b/css/main.css
@@ -20,9 +20,6 @@ legend {
 .main {
   background-color: blue;
 }
-.group2 {
-  background-color: yellowgreen;
-}
 .group3 {
   background-color: skyblue;
 }
@@ -605,7 +602,7 @@ label {
   background-color: tomato;
 }
 .search-form .flex-box {
-  display: flex;
+  display: flex; /*크롬의 fieldset 버그 때문에 묶음 */
   justify-content: space-between;
   align-items: center;
 }
@@ -623,6 +620,118 @@ label {
   color: #f7f7f7;
   padding: 0px 10px;
   border-radius: 3px;
+}
+/* 공지사항 및 자료실 */
+/* .board {
+  position: relative;
+}
+.notice > h2,
+.pds > h2 {
+  font-size: 1.4rem;
+  font-weight: 400;
+}
+.notice {
+  background-color: violet;
+}
+.notice-list {
+  position: absolute;
+  background-color: thistle;
+}
+.more {
+  position: absolute;
+}
+.pds-heading {
+  position: absolute;
+  left: 30px;
+}
+
+.pds-list {
+  display: none;
+  position: absolute;
+  background-color: tomato;
+} */
+.board {
+  background-color: yellow;
+  margin-top: 20px;
+  position: relative;
+  height: 200px;
+}
+.notice {
+  background-color: pink;
+}
+.pds {
+  background-color: skyblue;
+}
+.notice-heading,
+.pds-heading {
+  margin: 0;
+  font-weight: 400;
+  font-size: 1.4rem;
+  float: left;
+  border: 1px solid #aaa;
+  border-radius: 5px 5px 0 0;
+  background: #ccc linear-gradient(#ccc, #eee);
+}
+.tab {
+  border: 1px solid #aaa;
+  border-radius: 5px 5px 0 0;
+  background: #ccc linear-gradient(#ccc, #eee);
+  display: block;
+  padding: 5px 10px;
+  color: #999;
+}
+.board-act .tab {
+  color: #ed552f;
+  border-color: #ed55ef #ed552f #f7f7f7 #ed552f;
+  background: #fff;
+}
+.notice-list,
+.pds-list {
+  width: 100%; /* position absolute시 반드시 크기 고정 */
+  position: absolute;
+  top: 45px;
+  left: 0px;
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+  background-color: teal;
+}
+.notice-list li,
+.pds-list li {
+  background-color: skyblue;
+  margin: 8px 0;
+  display: flex;
+}
+.board ul a {
+  background-color: olive;
+  /* display: inline-block;
+  width: 270px; */
+  white-space: nowrap; /* 개행 금지 */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex-grow: 1;
+}
+.board time {
+  background-color: palegreen;
+  /* float: right; */
+}
+.more {
+  background-color: tomato;
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  padding: 8px;
+}
+.more .icon-plus {
+  color: hsla(110, 50%, 30%, 1);
+}
+.board-act [class$="-list"],
+.board-act .more {
+  display: block !important;
+} /* class$= ~로 끝나는 */
+.board-act [class$="-list"],
+.more {
+  display: none;
 }
 /* 슬로건 */
 .slogan {
