--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,8 @@
   display: block;
 }
 .a11y-hidden,
-legend {
+legend /* ,
+[class^="event-button-"] > span */ {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -768,12 +769,15 @@ label {
   border-color: #ed552f #ed552f #fff #ed552f;
   color: #ed552f;
 }
+.board ul,
+.board .more {
+  display: none;
+}
 .board ul {
   list-style: none;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
-  display: none;
   background: pink;
   min-height: 112px;
 }
@@ -799,7 +803,6 @@ label {
   top: -8px;
   right: -8px;
   padding: 8px;
-  display: none;
 }
 .more .icon-plus {
   color: hsla(110, 50%, 30%, 1);
@@ -855,6 +858,7 @@ label {
 .news {
   background-color: yellow;
   margin-top: 20px;
+  position: relative;
 }
 .news::before {
   background-color: cadetblue;
@@ -910,6 +914,117 @@ label {
 }
 .news-item-thumbnail figcaption {
   margin-top: 15px;
+}
+
+/* 이벤트 */
+/* .event {
+  background: linear-gradient(#ccc, #eee);
+  padding: 0px 5px;
+  border-radius: 10px 10px 0 0;
+  padding-bottom: 15px;
+  position: relative;
+}
+.event-heading {
+  position: relative;
+  font-size: 1.6rem;
+  margin: 0px 5px;
+  padding-top: 10px;
+}
+.event-heading span {
+  color: #ed552f;
+}
+.event-thumbnail {
+  text-align: center;
+}
+#eventDetail img {
+  box-shadow: 5px 5px #aaa;
+  border: 1px solid #999;
+}
+.event-brief {
+  padding: 5px 5px;
+  line-height: 1.4;
+}
+[class^="event-button-"] {
+  background-image: url(./images/back_forward.png);
+  background-repeat: no-repeat;
+  background-color: #fff;
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  margin: 2px 3px;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  border-width: 0;
+  border-radius: 2px;
+}
+.event-button-prev {
+  background-image: url(./images/back_forward.png);
+  right: 33px;
+  top: 10px;
+}
+.event-button-next {
+  background-image: url(./images/back_forward.png);
+  background-position: right 0;
+  right: 9px;
+  top: 10px;
+} */
+/* 패딩으로 글자 숨기기
+.button-event {
+  background-color: yellow;
+  height: 20px;
+  overflow: hidden;
+}
+[class^="event-button-"] {
+  width: 20px;
+  padding: 0px;
+  border: 0;
+  background-color: pink;
+  padding: 20px 0 0 0;
+} */
+.event {
+  background-color: lime;
+  position: relative;
+  border-bottom: 1px solid #999;
+}
+.event-heading {
+  font-size: 1.5rem;
+  margin: 0;
+}
+.point-color {
+  color: #ed552f;
+}
+.event-thumbnail,
+.event-breif {
+  margin: 10px 0;
+}
+.event-thumbnail img {
+  border: 1px solid #aaa;
+  box-shadow: 5px 5px 0 0 #999;
+}
+.event-brief em {
+  font-style: normal;
+}
+.button-event {
+  background-color: yellow;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+[class^="event-button-"] {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  background-color: skyblue;
+  background: skyblue url(./images/back_forward.png) no-repeat;
+  text-indent: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  border: 0;
+  cursor: pointer;
+}
+.event-button-next {
+  background-position: -36px 0;
 }
 /* 슬로건 */
 .slogan {
