--- a/css/main.css
+++ b/css/main.css
@@ -986,12 +986,13 @@ label {
   background: #ccc linear-gradient(#ccc, #eee);
 }
 .event {
-  background-color: lime;
+  background-color: rgb(255, 157, 100);
   position: relative;
   border-bottom: 1px solid #999;
 }
 .event-heading,
-.related-heading {
+.related-heading,
+.favorite-heading {
   font-size: 1.5rem;
   margin: 0;
 }
@@ -1069,7 +1070,7 @@ label {
   animation-fill-mode: forwards;
   animation-timing-function: ease-in-out;
 } */
-.related-list {
+.related-site-list {
   height: 27px;
   border: 1px solid #aaa;
   border-radius: 5px;
@@ -1085,20 +1086,95 @@ label {
   transition-duration: 2s, 0.5s;
   transition-delay: 0s, 2s; */
 }
-.related-list:hover,
-.related-list:focus-within {
+.related-site-list:hover,
+.related-site-list:focus-within {
   height: 147px;
   padding: 10px 0;
   outline: none;
 }
-.related-list a {
+.related-site-list a {
   display: block;
   line-height: 25px;
   text-indent: 20px;
 }
-.related-list a:focus {
+.related-site-list a:focus {
   outline: 1px solid #296897;
   outline-offset: -4px;
+}
+/* 인기사이트 */
+.favorite {
+  margin-top: 20px;
+  position: relative;
+}
+.favorite-list {
+  background-color: darkcyan;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.favorite-list ol {
+  background-color: springgreen;
+}
+.favorite-list li {
+  counter-increment: number;
+  padding-top: 10px;
+  background-color: coral;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+.favorite-list li::before {
+  content: counter(number);
+  color: #fff;
+  background-color: #aaa;
+  border-radius: 2px;
+  padding: 1px 5px;
+  margin-right: 5px;
+  font-size: 1.2rem;
+}
+/* .favorite-list li::before,
+.favorite-list a,
+.favorite-list em {
+  vertical-align: middle;
+}
+.favorite-list a {
+  background-color: orange;
+  display: inline-block;
+  width: 130px;
+} */
+/* .favorite-list a {
+  background-color: teal;
+  flex-grow: 1;
+} */
+.up,
+.down,
+.stop {
+  width: 9px;
+  height: 11px;
+  padding-top: 15px;
+  background-color: skyblue;
+  display: inline-block;
+  overflow: hidden;
+  background-image: url(./images/rank.png);
+  background-repeat: no-repeat;
+  padding: 0;
+  margin-left: auto;
+}
+.stop {
+  background-position: 0% 50%;
+}
+.down {
+  background-position: 0 100%;
+}
+/* .favorite-list li::before {
+  content: attr(data-message);
+} */
+
+.favorite .more {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  padding: 8px;
 }
 /* 슬로건 */
 .slogan {
