--- a/css/main.css
+++ b/css/main.css
@@ -18,19 +18,8 @@ legend /* ,
   clip: rect(0, 0, 0, 0);
   clip-path: polygon(0 0, 0 0, 0 0);
 }
-.main {
-  background-color: blue;
-}
 .slogan {
   background-color: blueviolet;
-  height: 10vh;
-}
-.footer-bg {
-  background-color: teal;
-}
-.footer {
-  background-color: tomato;
-  height: 10vh;
 }
 /* 기본 Box Sizing */
 body *,
@@ -1169,7 +1158,6 @@ label {
 /* .favorite-list li::before {
   content: attr(data-message);
 } */
-
 .favorite .more {
   position: absolute;
   top: 2px;
@@ -1178,4 +1166,195 @@ label {
 }
 /* 슬로건 */
 .slogan {
+  background-color: yellow;
+  position: relative;
+  padding: 0 70px 0 180px;
+}
+.slogan-heading {
+  background-color: skyblue;
+  width: 110px;
+  height: 83px;
+  text-align: center;
+  line-height: 83px;
+  font-size: 1.4rem;
+  font-weight: 400;
+  white-space: nowrap;
+  position: absolute;
+  padding: 0;
+  margin-left: 0;
+  left: 35px;
+  bottom: -35px;
+}
+.slogan-heading::after {
+  content: "";
+  display: block;
+  background-image: url(./images/coffee.png);
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.slogan-content {
+  color: #a09784;
+  background-color: slateblue;
+  font-size: 1.4rem;
+  padding: 0;
+  margin-bottom: 0;
+}
+.slogan-content q::before {
+  font-size: 3.5rem;
+  position: relative; /* relative로만 조절 */
+  top: 10px;
+}
+.slogan-content q::after {
+  content: "";
+}
+/* 푸터 */
+/* .footer-bg {
+  background: #ccc linear-gradient(#ccc, #fff);
+  position: relative;
+}
+.footer {
+  padding-top: 10px;
+}
+.footer-logo {
+  float: left;
+  padding: 40px 20px;
+}
+.guide-list {
+  display: flex;
+  list-style: none;
+  background-color: #777;
+  justify-content: center;
+  width: 650px;
+  border-radius: 20px;
+  padding: 0;
+  margin: 5px 5px;
+}
+.guide-list li {
+  background-color: yellow;
+}
+
+.guide-list li a {
+  padding: 0;
+  display: block;
+  font-size: 1.4rem;
+  background-color: teal;
+  color: white;
+  padding: 20px 20px;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+}
+.badge {
+  float: right;
+} */
+/* 푸터 포지션 */
+/* .footer-bg {
+  background: #ccc linear-gradient(#ccc, #fff);
+  padding: 15px 0px;
+}
+.footer {
+  background-color: yellow;
+  position: relative;
+  padding: 0 100px 0 180px;
+}
+.footer-logo {
+  background-color: skyblue;
+  position: absolute;
+  top: 0;
+  left: 40px;
+}
+가이드링크 목록
+.guide-list {
+  background-color: #7b8385;
+  list-style: none;
+  color: #f7f7f7;
+  padding: 2px 25px;
+  margin-top: 0;
+  margin-bottom: 10px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 10px;
+}
+.guide-list a {
+  background-color: orange;
+  padding: 5px 10px;
+  display: block;
+  text-transform: uppercase;
+}
+주소 및 저작권
+.address {
+  font-style: normal;
+  margin-bottom: 10px;
+}
+.address span {
+  margin-right: 20px;
+  background-color: sienna;
+}
+.copyright {
+  background-color: palegreen;
+  font-size: 1.4rem;
+}
+
+.badge {
+  background-color: pink;
+  position: absolute;
+  right: 0;
+  top: 0;
+} */
+/* 그리드 푸터 */
+.footer {
+  background-color: palevioletred;
+  display: grid;
+  /* grid-template-columns: 180px 660px 100px;
+  grid-template-rows: 50px 25px 25p; */
+  grid-template-areas:
+    "footerLogo guideList badge"
+    "footerLogo address   badge"
+    "footerLogo copyright badge";
+  justify-items: center;
+}
+.footer-logo {
+  /* grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 4; */
+  /* grid-column: 1 / 2;
+  grid-row: 1 / 4; */
+  /* grid-area: 1 / 1 / 4 / 2; */
+  grid-area: footerLogo;
+  align-self: center;
+  justify-self: center;
+  /* grid-row-start grid-column-start grid-row-end grid-column-end */
+}
+.guide-list {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  grid-area: guideList;
+}
+.address {
+  /* grid-column: 2 / 3;
+  grid-row: 2 / 3; */
+  /* grid-area: 2 / 2 / 3 / 3; */
+  grid-area: address;
+}
+.copyright {
+  /* grid-column: 2 / 3;
+  grid-row: 3 / 4; */
+  /* grid-area: 3 / 2 / 4 / 3; */
+  grid-area: copyright;
+}
+.badge {
+  /* grid-column: 3 / 4;
+  grid-row: 1 / 4; */
+  /* grid-area: 1 / 3 / 4 / 4; */
+  grid-area: badge;
+  align-self: center;
+  justify-self: center;
 }
